Support RF schema for Nvidia profile configuration
This MR adds a schema to support profile configuration feature.
The user can load a profile configuration json to configure
the BMC and additional components in the system.

The APIs:

URL: /redfish/v1/Systems/Bluefield/Oem/Nvidia/SystemConfigurationProfile
This is the main URL
```
{
    "@odata.id": "/redfish/v1/Systems/Bluefield/Oem/Nvidia/SystemConfigurationProfile",
    "@odata.type": "#NvidiaSystemConfigurationProfile.v1_0_0.NvidiaSystemConfigurationProfile",
    "Actions": {
        "#Profile.Upload": {
            "Target": "/redfish/v1/Systems/Bluefield/Oem/Nvidia/SystemConfigurationProfile/Actions/Profile.Update/"
        }
    },
    "List": {
        "@odata.id": "/redfish/v1/Systems/Bluefield/Oem/Nvidia/SystemConfigurationProfile/List"
    },
    "Name": "Nvidia System configuration Profile",
    "Status": {
        "@odata.id": "/redfish/v1/Systems/Bluefield/Oem/Nvidia/SystemConfigurationProfile/Status"
    }
}
```

POST operation on
/SystemConfigurationProfile/Actions/Profile.Update/,
 needs to be done with the profile: -d '{"ProfileFile": <profile_json>},
this will return task ID and profile number:
```
{
  "@odata.id": "/redfish/v1/TaskService/Tasks/22",
  "@odata.type": "#Task.v1_4_3.Task",
  "Id": "22",
  "ProfileNumber": 1,
  "TaskState": "Running",
  "TaskStatus": "OK"
}

```

Collection URL: /SystemConfigurationProfile/List
```

{
    "@odata.id": "/redfish/v1/Systems/Bluefield/Oem/Nvidia/Profiles/List/",
    "@odata.type": "#NvidiaProfileCollection.v1_0_0.NvidiaProfileList",
    "Members": [
        {
            "@odata.id": "/redfish/v1/Systems/Bluefield/Oem/Nvidia/Profiles/List/0"
        }
    ],
    "Members@odata.count": 1
}
```

Getting information about a specific profile:
URL: /SystemConfigurationProfile/List/<profile_number>/
```
{
    "@odata.id": "/redfish/v1/Systems/Bluefield/Oem/Nvidia/SystemConfigurationProfile/List/0/",
    "@odata.type":
    "Default": true,
    "Description": 

--- a/meson.build
+++ b/meson.build
@@ -144,6 +144,7 @@ feature_map = {
   'cpu-diag-support'                            : '-DBMCWEB_ENABLE_CPU_DIAG_FEATURE',
   'command-smbpbi-oob'                          : '-DBMCWEB_COMMAND_SMBPBI_OOB',
   'redfish-leak-detect'                         : '-DBMCWEB_ENABLE_REDFISH_LEAK_DETECT',
+  'profile-configuration'                       : '-DBMCWEB_ENABLE_PROFILES',
 }
 
 if(get_option('tls-auth-opt-in').enabled())
