--- a/redfish-core/schema/oem/openbmc/meson.build
+++ b/redfish-core/schema/oem/openbmc/meson.build
@@ -3,7 +3,7 @@ schemas = {
     'insecure-disable-auth': 'OpenBMCAccountService',
     'redfish-oem-manager-fan-data': 'OemManager',
     'redfish-provisioning-feature': 'OemComputerSystem',
-    #'vm-nbdproxy': 'OemVirtualMedia',
+    #'vm-nbdproxy': 'OpenBMCVirtualMedia',
 }
 
 foreach option_key, schema : schemas
