Untie OpenOCD service from enable-debug-interface flag
In GB200NVL, SatMC is behind HMC to provide processor debug control
and will enable enable-debug-interface for that. and OpenOCD service
is running on BMC without the enable-debug-interface enabled. Hence,
untie OpenOCD service from enable-debug-interface flag and let
OpenOCD service relies on nvidia-oem-openocd flag.

Fixes jira https://jirasw.nvidia.com/browse/DGXOPENBMC-12071

Signed-off-by: Curtis Chuang <shengchihc@nvidia.com>

--- a/config/meson.build
+++ b/config/meson.build
@@ -120,6 +120,7 @@ conf_data.set10('BMCWEB_ENABLE_NVIDIA_BOOTENTRYID', nvidia_bootentryid.enabled()
 feature_options = [
     'basic-auth',
     'cookie-auth',
+    'enable-debug-interface',
     'experimental-http2',
     'experimental-redfish-multi-computer-system',
     'google-api',
@@ -135,6 +136,7 @@ feature_options = [
     'kvm',
     'meta-tls-common-name-parsing',
     'mutual-tls-auth',
+    'nvidia-oem-openocd',
     'redfish-aggregation',
     'redfish-allow-deprecated-power-thermal',
     'redfish-bmc-journal',
@@ -153,7 +155,6 @@ feature_options = [
     'tests',
     'vm-websocket',
     'xtoken-auth',
-    'enable-debug-interface',
 ]
 
 string_options = [
