Meson format meson files
Change-Id: I0174fbb1419f3c9a6c7b040909fcb17a7de735be
Signed-off-by: Ed Tanous <etanous@nvidia.com>

--- a/event-listener/service_file/meson.build
+++ b/event-listener/service_file/meson.build
@@ -1,6 +1,4 @@
-unit_files = [
-    ['redfishevent-listener.service'],
-]
+unit_files = [['redfishevent-listener.service']]
 
 foreach tuple : unit_files
     configure_file(
