--- a/config/meson.build
+++ b/config/meson.build
@@ -3,37 +3,97 @@
 conf_data = configuration_data()
 
 if get_option('firmware-image-limit') > get_option('http-body-limit')
-  error('Firmware image size limit should be lesser than http body limit.')
+    error('Firmware image size limit should be lesser than http body limit.')
 else
-  conf_data.set('FIRMWARE_IMAGE_LIMIT_MB', get_option('firmware-image-limit'))
+    conf_data.set('FIRMWARE_IMAGE_LIMIT_MB', get_option('firmware-image-limit'))
 endif
-conf_data.set('STALE_SENSOR_UPPER_LIMIT_IN_MILISECOND', get_option('stalesensor-upper-limit-milisecond'))
-conf_data.set('PLATFORM_METRICS_SENSING_INTERVAL', get_option('platform-metrics-sensing-interval'))
-conf_data.set('UPDATE_SERVICE_IMAGE_LOCATION', get_option('update-service-image-location'))
-conf_data.set('UPDATE_SERVICE_STAGE_LOCATION', get_option('update-service-stage-location'))
-conf_data.set('UPDATE_SERVICE_TASK_TIMEOUT', get_option('update-service-task-timeout'))
+conf_data.set(
+    'STALE_SENSOR_UPPER_LIMIT_IN_MILISECOND',
+    get_option('stalesensor-upper-limit-milisecond'),
+)
+conf_data.set(
+    'PLATFORM_METRICS_SENSING_INTERVAL',
+    get_option('platform-metrics-sensing-interval'),
+)
+conf_data.set(
+    'UPDATE_SERVICE_IMAGE_LOCATION',
+    get_option('update-service-image-location'),
+)
+conf_data.set(
+    'UPDATE_SERVICE_STAGE_LOCATION',
+    get_option('update-service-stage-location'),
+)
+conf_data.set(
+    'UPDATE_SERVICE_TASK_TIMEOUT',
+    get_option('update-service-task-timeout'),
+)
 conf_data.set('MFG_TEST_TIMEOUT', get_option('manufacturing-test-timeout'))
 conf_data.set_quoted('PLATFORM_SYSTEM_ID', get_option('platform-system-id'))
-conf_data.set_quoted('PLATFORM_SYSTEM_DESCRIPTION', get_option('platform-system-description'))
-conf_data.set_quoted('PLATFORM_DEVICE_PREFIX', get_option('platform-device-prefix'))
+conf_data.set_quoted(
+    'PLATFORM_SYSTEM_DESCRIPTION',
+    get_option('platform-system-description'),
+)
+conf_data.set_quoted(
+    'PLATFORM_DEVICE_PREFIX',
+    get_option('platform-device-prefix'),
+)
 conf_data.set_quoted('PLATFORM_BMC_ID', get_option('platform-bmc-id'))
-conf_data.set_quoted('PLATFORM_NETWORK_ADAPTER', get_option('platform-network-adapter'))
-conf_data.set_quoted('PLATFORM_TOTAL_POWER_SENSOR_NAME', get_option('platform-total-power-sensor-name'))
-conf_data.set_quoted('PLATFORM_POWER_CONTOL_SENSOR_NAME', get_option('platform-power-control-sensor-name'))
+conf_data.set_quoted(
+    'PLATFORM_NETWORK_ADAPTER',
+    get_option('platform-network-adapter'),
+)
+conf_data.set_quoted(
+    'PLATFORM_TOTAL_POWER_SENSOR_NAME',
+    get_option('platform-total-power-sensor-name'),
+)
+conf_data.set_quoted(
+    'PLATFORM_POWER_CONTOL_SENSOR_NAME',
+    get_option('platform-power-control-sensor-name'),
+)
 conf_data.set_quoted('PLATFORM_METRICS_ID', get_option('platform-metrics-id'))
 conf_data.set_quoted('HOST_IFACE_CHANNEL', get_option('host-iface-channel'))
-conf_data.set_quoted('PLATFORM_GPU_NAME_PREFIX', get_option('platform-gpu-name-prefix'))
-conf_data.set_quoted('PLATFORM_CHASSIS_NAME', get_option('platform-chassis-name'))
-conf_data.set_quoted('RFA_HMC_UPDATE_TARGET', get_option('rfa-hmc-update-target'))
+conf_data.set_quoted(
+    'PLATFORM_GPU_NAME_PREFIX',
+    get_option('platform-gpu-name-prefix'),
+)
+conf_data.set_quoted(
+    'PLATFORM_CHASSIS_NAME',
+    get_option('platform-chassis-name'),
+)
+conf_data.set_quoted(
+    'RFA_HMC_UPDATE_TARGET',
+    get_option('rfa-hmc-update-target'),
+)
 conf_data.set_quoted('RFA_BMC_HOST_URL', get_option('rfa-bmc-host-url'))
-conf_data.set_quoted('NETWORK_ADAPTER_PREFIX', get_option('nvidia-network-adapter-prefix'))
-conf_data.set_quoted('NETWORK_ADAPTER_LINK_PREFIX', get_option('nvidia-network-adapter-link-prefix'))
+conf_data.set_quoted(
+    'NETWORK_ADAPTER_PREFIX',
+    get_option('nvidia-network-adapter-prefix'),
+)
+conf_data.set_quoted(
+    'NETWORK_ADAPTER_LINK_PREFIX',
+    get_option('nvidia-network-adapter-link-prefix'),
+)
 conf_data.set('RFA_SUBSCRIBE_TIME', get_option('rfa-delay-subscribe-time'))
-conf_data.set_quoted('REDFISH_AGGREGATION_PREFIX', get_option('redfish-aggregation-prefix'))
-conf_data.set_quoted('FW_MCTP_MAPPING_JSON', join_paths(package_datadir, 'fw_mctp_mapping.json'))
-conf_data.set('BUILD_DESCRIPTION_FILE_PATH', get_option('build-description-file-path'))
-conf_data.set('COMPUTER_SYSTEM_INVENTORY_PATH', get_option('computer-system-inventory-path'))
-conf_data.set('OTP_PROVISIONING_STATUS_FILE_PATH', get_option('otp-provisioning-status-file-path'))
+conf_data.set_quoted(
+    'REDFISH_AGGREGATION_PREFIX',
+    get_option('redfish-aggregation-prefix'),
+)
+conf_data.set_quoted(
+    'FW_MCTP_MAPPING_JSON',
+    join_paths(package_datadir, 'fw_mctp_mapping.json'),
+)
+conf_data.set(
+    'BUILD_DESCRIPTION_FILE_PATH',
+    get_option('build-description-file-path'),
+)
+conf_data.set(
+    'COMPUTER_SYSTEM_INVENTORY_PATH',
+    get_option('computer-system-inventory-path'),
+)
+conf_data.set(
+    'OTP_PROVISIONING_STATUS_FILE_PATH',
+    get_option('otp-provisioning-status-file-path'),
+)
 conf_data.set('BMCWEB_LOG_LEVEL', get_option('bmcweb-logging-log-level'))
 conf_data.set('MIN_UCASE_CHRS', get_option('min-ucase-characters'))
 conf_data.set('MIN_LCASE_CHRS', get_option('min-lcase-characters'))
@@ -42,9 +102,15 @@ conf_data.set('MIN_SPEC_CHRS', get_option('min-special-characters'))
 conf_data.set('MIN_PASSWORD_LENGTH', get_option('min-password-length'))
 conf_data.set('GPU_INDEX_START', get_option('gpu-index-start'))
 enable_health_populate = get_option('redfish-health-populate')
-conf_data.set10('BMCWEB_ENABLE_HEALTH_POPULATE', enable_health_populate.enabled())
+conf_data.set10(
+    'BMCWEB_ENABLE_HEALTH_POPULATE',
+    enable_health_populate.enabled(),
+)
 enable_proc_mem_status = get_option('redfish-enable-proccessor-memory-status')
-conf_data.set10('BMCWEB_ENABLE_PROC_MEM_STATUS', enable_proc_mem_status.enabled())
+conf_data.set10(
+    'BMCWEB_ENABLE_PROC_MEM_STATUS',
+    enable_proc_mem_status.enabled(),
+)
 conf_data.set('BMCWEB_RESPONSE_TIMEOUT', get_option('bmcweb-response-timeout'))
 nvidia_bootentryid = get_option('nvidia-bootentryid')
 conf_data.set10('BMCWEB_ENABLE_NVIDIA_BOOTENTRYID', nvidia_bootentryid.enabled())
@@ -96,9 +162,7 @@ string_options = [
     'redfish-system-uri-name',
 ]
 
-int_options = [
-    'http-body-limit',
-]
+int_options = ['http-body-limit']
 
 feature_options_string = '\n//Feature options\n'
 string_options_string = '\n// String options\n'
@@ -129,7 +193,7 @@ conf_data.set('MESON_INSTALL_PREFIX', get_option('prefix'))
 loglvlopt = get_option('bmcweb-logging')
 if get_option('buildtype').startswith('debug') and loglvlopt == 'disabled'
     # Override logging level as 'debug' if 'bmcweb-logging' is set as 'disabled'
-   loglvlopt = 'debug'
+    loglvlopt = 'debug'
 endif
 loglvlopt = loglvlopt.to_upper()
 string_options_string += 'constexpr std::string_view  BMCWEB_LOGGING_LEVEL' + ' = "' + loglvlopt + '";\n'
@@ -142,7 +206,7 @@ conf_data.set(
     string_options_string + int_options_string + feature_options_string,
 )
 
-conf_data.set('TLS_CACERT_PATH', get_option('tls-cacert-path') )
+conf_data.set('TLS_CACERT_PATH', get_option('tls-cacert-path'))
 
 conf_h_dep = declare_dependency(
     include_directories: include_directories('.'),
@@ -156,27 +220,23 @@ conf_h_dep = declare_dependency(
 # Configure and install systemd unit files
 configure_file(
     input: 'bmcweb.socket.in',
-               output : 'bmcweb.socket',
-               install_dir: systemd_system_unit_dir,
+    output: 'bmcweb.socket',
+    install_dir: systemd_system_unit_dir,
     install: true,
-    configuration: configuration_data({
-        'BMCWEB_HTTPS_PORT': get_option('https_port'),
-    }),
+    configuration: configuration_data(
+        {'BMCWEB_HTTPS_PORT': get_option('https_port')},
+    ),
 )
 
 configure_file(
     input: 'bmcweb.service.in',
-               output : 'bmcweb.service',
-               install_dir: systemd_system_unit_dir,
+    output: 'bmcweb.service',
+    install_dir: systemd_system_unit_dir,
     install: true,
-    configuration: configuration_data({
-        'MESON_INSTALL_PREFIX': get_option('prefix'),
-    }),
+    configuration: configuration_data(
+        {'MESON_INSTALL_PREFIX': get_option('prefix')},
+    ),
 )
 
 # Copy pam-webserver to etc/pam.d
-install_data(
-  'pam-webserver',
-  install_dir: '/etc/pam.d/',
-  rename: 'webserver',
-)
+install_data('pam-webserver', install_dir: '/etc/pam.d/', rename: 'webserver')
