--- a/config/meson.build
+++ b/config/meson.build
@@ -151,6 +151,7 @@ feature_options = [
     'redfish',
     'rest',
     'session-auth',
+    'nvidia-oem-properties',
     'static-hosting',
     'tests',
     'vm-websocket',
