Disable ist-mode by default
Add a new compile time option to enable ist-mode.
Previously it is enabled with "BMCWEB_ENABLE_NVIDIA_OEM_PROPERTIES".

Fixes nvbug https://nvbugspro.nvidia.com/bug/4889622

 curl -k -u root:0penBmc --location --request
 GET https://10.114.128.69/redfish/v1/Systems/System_0/
{
  "@Redfish.Settings": {
    "@odata.type": "#Settings.v1_3_5.Settings",
    "SettingsObject": {
      "@odata.id": "/redfish/v1/Systems/System_0/Settings"
    }
  },
  "@odata.id": "/redfish/v1/Systems/System_0",
  "@odata.type": "#ComputerSystem.v1_22_0.ComputerSystem",
  "Actions": {
    "#ComputerSystem.Reset": {
      "@Redfish.ActionInfo": "/redfish/v1/Systems/System_0/
ResetActionInfo",
      "target": "/redfish/v1/Systems/System_0/Actions/
ComputerSystem.Reset"
    }
  },
  "Bios": {
    "@odata.id": "/redfish/v1/Systems/System_0/Bios"
  },
  "Boot": {
    "AutomaticRetryAttempts": 3,
    "AutomaticRetryConfig": "RetryAttempts",
    "AutomaticRetryConfig@Redfish.AllowableValues": [
      "Disabled",
      "RetryAttempts"
    ],
    "BootOptions": {
      "@odata.id": "/redfish/v1/Systems/System_0/BootOptions"
    },
    "BootOrder": [],
    "BootOrderPropertySelection": "BootOrder",
    "BootSourceOverrideEnabled": "Disabled",
    "BootSourceOverrideEnabled@Redfish.AllowableValues": [
      "Once",
      "Continuous",
      "Disabled"
    ],
    "BootSourceOverrideTarget": "None",
    "BootSourceOverrideTarget@Redfish.AllowableValues": [
      "None",
      "Pxe",
      "Hdd",
      "Cd",
      "Diags",
      "BiosSetup",
      "Usb"
    ],
    "RemainingAutomaticRetryAttempts": 3,
    "StopBootOnFault": "Never",
    "TrustedModuleRequiredToBoot": "Disabled"
  },
  "BootProgress": {
    "LastState": "OSRunning",
    "LastStateTime": "2024-09-27T08:01:07.487602+00:00"
  },
  "Description": "Computer System",
  "GraphicalConsole": {
    "ConnectTypesSupported": [
      "KVMIP"
    ],
    "MaxConcurrentSessions": 4,
    "ServiceEnabled": true
  },
  "HostWatchd

--- a/config/meson.build
+++ b/config/meson.build
@@ -160,6 +160,7 @@ feature_options = [
     'vm-nbdproxy',
     'xtoken-auth',
     'sort-event-log',
+    'enable-ist-mode',
 ]
 
 string_options = [
