Make ComputerSystem LastResetTime property optional at build-time
Fixes nvbug https://nvbugs/4802135

--- a/config/meson.build
+++ b/config/meson.build
@@ -153,6 +153,7 @@ feature_options = [
     'session-auth',
     'nvidia-oem-properties',
     'static-hosting',
+    'systems-lastresettime',
     'tests',
     'vm-websocket',
     'vm-nbdproxy',
