--- a/config/meson.build
+++ b/config/meson.build
@@ -143,6 +143,7 @@ feature_options = [
     'redfish-cpu-log',
     'redfish-dbus-log',
     'redfish-dump-log',
+    'redfish-net-log',
     'redfish-host-logger',
     'redfish-new-powersubsystem-thermalsubsystem',
     'redfish-oem-manager-fan-data',
