Add OEMDiagnosticDataType allowable list by platform for system dump
Change:
* Add allowable option of OEMDiagnosticDataType in meson.
  We can customize it by platform if something is not supported.
  The default list is -
    "EROT, ROT, FirmwareAttributes"
* Add a condition to check the valid allowable values from the list.

Reason:
* GB200NVL platform does not support all the default OEM diagnostic
  data types.
* Need the error return if the allowable value is not matched with a
  user send.

Fixes nvbug https://nvbugspro.nvidia.com/bug/4914117

Signed-off-by: Amy Chang <yahanc@nvidia.com>

--- a/config/meson.build
+++ b/config/meson.build
@@ -173,6 +173,7 @@ int_options = ['http-body-limit']
 feature_options_string = '\n//Feature options\n'
 string_options_string = '\n// String options\n'
 int_options_string = '\n// Integer options\n'
+array_options_string = '\n// Array options\n'
 
 foreach option_key : feature_options + string_options + int_options
     option_key_config = 'BMCWEB_' + option_key.to_upper()
@@ -204,9 +205,24 @@ endif
 loglvlopt = loglvlopt.to_upper()
 string_options_string += 'constexpr std::string_view  BMCWEB_LOGGING_LEVEL' + ' = "' + loglvlopt + '";\n'
 
+idx = 0
+oem_diagnostic_allowable_type = get_option('oem-diagnostic-allowable-type')
+array_options_string += 'constexpr std::string_view  OEM_DIAG_DATA_TYPE_ARRAY[] = {'
+foreach name : oem_diagnostic_allowable_type
+    message(name)
+    if idx != 0
+        array_options_string += ', '
+    endif
+    array_options_string += '"' + name + '"'
+
+    idx += 1
+endforeach
+array_options_string += '};\n'
+
 conf_data.set(
     'BMCWEB_OPTIONS',
-    string_options_string + int_options_string + feature_options_string,
+    string_options_string + int_options_string +
+    feature_options_string + array_options_string,
 )
 
 conf_data.set('TLS_CACERT_PATH', get_option('tls-cacert-path'))
