--- a/config/bmcweb_config.h.in
+++ b/config/bmcweb_config.h.in
@@ -17,7 +17,7 @@
 #define PLATFORMCHASSISNAME @PLATFORM_CHASSIS_NAME@
 
 #define HOSTIFACECHANNEL @HOST_IFACE_CHANNEL@
-#define FWMCTPMAPPINGJSON @FW_MCTP_MAPPING_JSON@
+#define FWUUIDMAPPINGJSON @FW_UUID_MAPPING_JSON@
 
 #define NETWORKADAPTERPREFIX @NETWORK_ADAPTER_PREFIX@
 #define NETWORKADAPTERLINKPREFIX @NETWORK_ADAPTER_LINK_PREFIX@
