--- a/config/bmcweb_config.h.in
+++ b/config/bmcweb_config.h.in
@@ -1,6 +1,7 @@
 #pragma once
 #include <cstdint>
 #include <string_view>
+#include <array>
 
 /*
  Meson file (config/meson.build) is used to populate all the features flags
