Make libpwquality optional
libpwquality was not added to subprojects, which makes bmcweb no longer
buildable.  This commit makes libpwquality optional, which is a
temporary measure while this is moved to pam.

Change-Id: I63a38b27bb512aee042dfbbc5fb55218f3db5a07
Signed-off-by: Ed Tanous <etanous@nvidia.com>

--- a/meson.build
+++ b/meson.build
@@ -398,7 +398,10 @@ add_project_arguments('-DSYSTEMD_VERSION=' + systemd.version(), language: 'cpp')
 zlib = dependency('zlib')
 bmcweb_dependencies += [systemd, zlib]
 
-pwquality_dep = dependency('pwquality')
+pwquality_dep = dependency('pwquality', required: false)
+if pwquality_dep.found()
+    add_project_arguments('-DHAVE_PWQUALITY', language: 'cpp')
+endif
 bmcweb_dependencies += pwquality_dep
 
 nlohmann_json_dep = dependency(
