add NvidiaDebugToken_v1.xml into build
Redfish-Reference-Checker checks all references and misses this one.

Fixes nvbug https://nvbugspro.nvidia.com/bug/4896538

Signed-off-by: Curtis Chuang <shengchihc@nvidia.com>

--- a/redfish-core/schema/oem/nvidia/meson.build
+++ b/redfish-core/schema/oem/nvidia/meson.build
@@ -3,6 +3,7 @@ if get_option('nvidia-oem-properties').allowed()
     schemas = [
         'NvidiaChassis_v1.xml',
         'NvidiaComputerSystem_v1.xml',
+        'NvidiaDebugToken_v1.xml',
         'NvidiaEnvironmentMetrics_v1.xml',
         'NvidiaErrorInjection_v1.xml',
         'NvidiaEvent_v1.xml',
