--- a/config/meson.build
+++ b/config/meson.build
@@ -141,6 +141,7 @@ feature_options = [
     'redfish-cpu-log',
     'redfish-dbus-log',
     'redfish-dump-log',
+    'redfish-manager-event-log',
     'redfish-host-logger',
     'redfish-new-powersubsystem-thermalsubsystem',
     'redfish-oem-manager-fan-data',
