Enable NSM Raw Command Support
- Added 'nsm-raw-command-enable' feature option in `config/meson.build`
 and `meson.options`.
- Included `redfish-core/src/utils/nsm_cmd_support.cpp` in
  `meson.build`.
- Updated `redfish-core/include/utils/nvidia_manager_utils.hpp` to
  include NSM raw command support functions.
- Modified `redfish-core/lib/managers.hpp` to conditionally add
  NSM raw command actions.
- Updated `redfish-core/src/redfish.cpp` to conditionally register
NSM raw command routes.
- Removed Nvidia from path for #NvidiaManager.SyncOOBRawCommand and
#NvidiaManager.AsyncOOBRawCommand

Fixes jira https://jirasw.nvidia.com/browse/DGXOPENBMC-14369

--- a/config/meson.build
+++ b/config/meson.build
@@ -133,6 +133,7 @@ feature_options = [
     'kvm',
     'meta-tls-common-name-parsing',
     'mutual-tls-auth',
+    'nsm-raw-command-enable',
     'nvidia-oem-openocd',
     'redfish-aggregation',
     'redfish-allow-deprecated-power-thermal',
