--- a/meson.build
+++ b/meson.build
@@ -504,6 +504,7 @@ srcfiles_bmcweb = files(
     'redfish-core/src/utils/dbus_utils.cpp',
     'redfish-core/src/utils/json_utils.cpp',
     'redfish-core/src/utils/time_utils.cpp',
+    'redfish-core/src/utils/nsm_cmd_support.cpp',
     'src/boost_asio.cpp',
     'src/boost_asio_ssl.cpp',
     'src/boost_beast.cpp',
