Adding the changes for the RF api for rsyslog client
Modification added for the RF api enablement for the
rsyslog client.

Fixes JIRA https://jirasw.nvidia.com/browse/DGXOPENBMC-14455
Signed-off-by: Deepak Kamat <dkamat@nvidia.com>

--- a/config/meson.build
+++ b/config/meson.build
@@ -115,6 +115,7 @@ conf_data.set10('BMCWEB_ENABLE_NVIDIA_BOOTENTRYID', nvidia_bootentryid.enabled()
 
 feature_options = [
     'basic-auth',
+    'rsyslog-client',
     'check-oem-diagnostic-type',
     'cookie-auth',
     'enable-debug-interface',
