--- a/config/meson.build
+++ b/config/meson.build
@@ -146,6 +146,7 @@ feature_options = [
     'redfish-new-powersubsystem-thermalsubsystem',
     'redfish-oem-manager-fan-data',
     'redfish-provisioning-feature',
+    'redfish-sw-einj',
     'redfish-updateservice-use-dbus',
     'redfish',
     'rest',
