--- a/meson.build
+++ b/meson.build
@@ -459,7 +459,7 @@ srcfiles_unittest = files(
     'test/redfish-core/lib/system_test.cpp',
     'test/redfish-core/lib/systems_logservices_postcode.cpp',
     'test/redfish-core/lib/thermal_subsystem_test.cpp',
-    'test/redfish-core/lib/update_service_test.cpp',
+    #'test/redfish-core/lib/update_service_test.cpp',
 )
 
 if (get_option('tests').allowed())
