chassis: Adding support for allow list for chassis RF properties
This patch adds support for a platform specific allow list to determine
which chassis RF endpoint properties would be populated, along with
disabling patch operations on the properties

Outputs from hgxb:

BMC (All properties enabled):
```
 ...
 "Oem": {
   "Nvidia": {
     "@odata.type": "#NvidiaChassis.v1_3_0.NvidiaRoTChassis",
     "AutomaticBackgroundCopyEnabled": true,
     "BackgroundCopyStatus": "Completed",
     "InbandUpdatePolicyEnabled": true,
     "IrreversibleConfigEnabled": false,
     "RoTProtectedComponents": {
       "@odata.id": "/redfish/v1/Chassis/HGX_ERoT_BMC_0/Oem/NvidiaRoT/RoTProtectedComponents"
     }
   }
 },
 ...
```

FPGA (Inband Update Policy blocked):
```
...
  "Oem": {
    "Nvidia": {
      "@odata.type": "#NvidiaChassis.v1_3_0.NvidiaRoTChassis",
      "AutomaticBackgroundCopyEnabled": true,
      "BackgroundCopyStatus": "Completed",
      "IrreversibleConfigEnabled": false,
      "RoTProtectedComponents": {
        "@odata.id": "/redfish/v1/Chassis/HGX_ERoT_FPGA_0/Oem/NvidiaRoT/RoTProtectedComponents"
      }
    }
  },
...
```

Patching InbandPolicyUpdate:

Successful on BMC:
```
{
  "@Message.ExtendedInfo": [
    {
      "@odata.type": "#Message.v1_1_1.Message",
      "Message": "The request completed successfully.",
      "MessageArgs": [],
      "MessageId": "Base.1.18.1.Success",
      "MessageSeverity": "OK",
      "Resolution": "None."
    }
  ]
```
Returns PropertyUnknown on FPGA:
```
curl -s --connect-timeout 120 -X PATCH "192.168.31.1/redfish/v1/Chassis/HGX_ERoT_FPGA_0/" -d '{"Oem": {"Nvidia": {"InbandUpdatePolicyEnabled": false}}}'
{
  "error": {
    "@Message.ExtendedInfo": [
      {
        "@odata.type": "#Message.v1_1_1.Message",
        "Message": "The property InbandUpdatePolicyEnabled is not in the list of valid properties for the resource.",
        "MessageArgs": [
          "InbandUpdatePolicyEnabled"
        ],
        "MessageId": "Base.1.18.1.Prop

--- a/config/bmcweb_config.h.in
+++ b/config/bmcweb_config.h.in
@@ -26,6 +26,7 @@
 
 #define HOSTIFACECHANNEL @HOST_IFACE_CHANNEL@
 #define FWUUIDMAPPINGJSON @FW_UUID_MAPPING_JSON@
+#define ROTCHASSISALLOWLISTJSON @ROT_CHASSIS_ALLOWLIST_JSON@
 
 #define NETWORKADAPTERPREFIX @NETWORK_ADAPTER_PREFIX@
 #define NETWORKADAPTERLINKPREFIX @NETWORK_ADAPTER_LINK_PREFIX@
