Add the option to hide Processor/Memory Summary init value in Systems/{}
Change:
* In GB200NVL, the ProcessorSummary and MemorySummary info is displayed
in the HMC API.
(/redfish/v1/Systems/HGX_Baseboard_0) but not in the BMC API
(/redfish/v1/Systems/System_0). This causes the
Redfish-Interop-Validator to fail on /redfish/v1/Systems/System_0.
* If there's no processor, there should be no ProcessorSummary and
MemorySummary.
* Add the option to remove the default value for ProcessorSummar and
MemorySummary.

Tested:
* Checked /redfish/v1/Systems/System_0 API on GB200NVL-BMC.
There is no ProcessorSummary and MemorySummary.

Fixes NVbug https://nvbugs/5018183

Signed-off-by: Mark Kuo <makuo@nvidia.com>

--- a/meson.build
+++ b/meson.build
@@ -139,6 +139,7 @@ feature_map = {
     'patch-ssh'                                   : '-DBMCWEB_ENABLE_PATCH_SSH',
     'dhcp-configuration-update'                   : '-DBMCWEB_DHCP_CONFIGURATION_UPDATE',
     'host-os-features'                            : '-DBMCWEB_ENABLE_HOST_OS_FEATURE',
+    'hide-host-os-features-init-value'            : '-DBMCWEB_HIDE_HOST_OS_INIT_VALUE',
     'fencing-privilege'                           : '-DBMCWEB_ENABLE_FENCING_PRIVILEGE',
     'host-auxpower-features'                            : '-DBMCWEB_ENABLE_HOST_AUX_POWER',
     'nic-configuration-update'                    : '-DBMCWEB_NIC_CONFIGURATION_UPDATE',
