Fix Sanity issues
Fix ifdef refactor with clang-format

Fixes JIRA https://upstream-sync
Signed-off-by: Rohit PAI <ropai@nvidia.com>

--- a/config/meson.build
+++ b/config/meson.build
@@ -67,11 +67,13 @@ feature_options = [
     'nvidia-oem-properties',
     'nvidia-uuid-from-platform-chassis-name',
     'nvidia-retimer-debugmode',
+    'nvidia-device-status-from-association',
     'patch-ssh',
     'platform-metrics',
     'power-control-type-percentage',
     'profile-configuration',
     'redfish-aggregation',
+    'redfish-aggregation-prefix-removal',
     'redfish-allow-deprecated-power-thermal',
     'redfish-bmc-journal',
     'redfish-cpu-log',
