--- a/config/meson.build
+++ b/config/meson.build
@@ -213,6 +213,7 @@ conf_data.set(
 )
 
 conf_data.set_quoted('FW_MCTP_MAPPING_JSON', join_paths(package_datadir, 'fw_mctp_mapping.json'))
+conf_data.set_quoted('ROT_CHASSIS_ALLOWLIST_JSON',join_paths(package_datadir, 'rot_chassis_properties_allowlist.json'))
 
 conf_data.set('BMCWEB_TLS_CACERT_PATH', get_option('tls-cacert-path') )
 
