Fix CI and Unit tests after develop-next rebase
Fixes JIRA https://jirasw.nvidia.com/browse/DGXOPENBMC-14448

Fixes JIRA https://upstream-sync
Signed-off-by: Rohit PAI <ropai@nvidia.com>

--- a/config/meson.build
+++ b/config/meson.build
@@ -114,6 +114,7 @@ feature_options = [
     'redfish-manager-event-log',
     'nsm-raw-command-enable',    
     'enable-ist-mode',
+    'hide-host-os-features-init-value',
 ]
 
 string_options = [
